force-app/main/default/objects/Matricula_Account_Benefit_Fechas_Id__c/Matricula_Account_Benefit_Fechas_Id__c.object-meta.xml
<CustomObject>
    <label>Temporal Matricula Fecha</label>
    <nameField>
        <label>Temporal Matriculas Fechas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Matriculas Fechas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>