force-app/main/default/objects/Matricula_Account_Benefit_Fechas_Id__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>