force-app/main/default/objects/Matricula_Account_Benefit_Fechas_Id__c/fields/MM_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>MM_FECHAS__c</fullName>
    <label>MM_FECHAS</label>
    <type>Date</type>
</CustomField>