force-app/main/default/objects/Matricula_Account_Benefit_Fechas_Id__c/fields/P_DDDKEY__c.field-meta.xml
<CustomField>
    <fullName>P_DDDKEY__c</fullName>
    <label>P_DDDKEY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>