force-app/main/default/objects/Matricula_Account_Benefit_Fechas_Id__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>MM_FECHAS__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MM_FECHAS__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2022</value>
    </filters>
    <filters>
        <field>P_DDDKEY__c</field>
        <operation>startsWith</operation>
        <value>MAT094202023405</value>
    </filters>
    <label>All Records</label>
</ListView>